--- a/config/example_auth.yaml
+++ b/config/example_auth.yaml
@@ -2,6 +2,7 @@ cameras:
   drive1:
     url: http://192.168.0.11/ISAPI/Streaming/channels/101/picture
     interval: 2
+    store: 30
     auth: basic
     username: admin
     password: abc123
