--- a/config/example_multiple.yaml
+++ b/config/example_multiple.yaml
@@ -2,9 +2,11 @@ cameras:
   frontdoor:
     url: http://192.168.0.9/ISAPI/Streaming/channels/101/picture
     interval: 2
+    store: 30
   backdoor:
     url: http://192.168.0.10/jpg/1/image.jpg
     interval: 2
+    store: 30
 server:
   web:
     port: 8080
